# smartcar

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  Makefile  README.md  smartcar.ioc
Inc/: esp01s.h  stm32f1xx_it.h
Src/: esp01s.c  main.c  stm32f1xx_it.c  tim.c  usart.c
User/: esp01s.c  esp01s.h  main.c  motor.c  motor.h  ring.c  ring.h  servo.c  servo.h
app/: pubspec.yaml
app/android/app/src/main/: AndroidManifest.xml
app/assets/config/: config.json
app/lib/: app_provider.dart  audio.dart  config.dart  control_page.dart  home_page.dart  main.dart  msg.dart  my_event_bus.dart  permission.dart  settings_page.dart  tcp_server.dart  theme.dart
cmake/: stm32_gcc.cmake
cmake/stm32/: common.cmake  utilities.cmake
